Day3/rolling-update/hello-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: hello
    weight: null
